# foundry

./: AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check-branch-naming.yml  check-pr-links.yml  ci.yml  pr-review-brief.yml
docs/: about.md  adapters.md  contributing.md  io.md
docs/ci/: pr_review_bot.md
docs/contributing/: branching.md
scripts/: __init__.py
scripts/ci/: __init__.py  check_branch_naming.py  check_pr_closing_ref.py  check_tc06.sh  coverage_gate.py  diff_api_surface.py  review_brief.py
src/foundry/: __init__.py  __main__.py  cli.py  config.py  naming.py  scaffold.py  template.py
src/foundry/adapters/: base.py  (+3 more)
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_naming.py  test_openai_adapter_contract.py  test_openai_adapter_edges.py  test_openai_adapter_parity.py  test_runtime_loop.py  test_scaffold.py  test_template.py  test_template_provider_adapter.py
tests/adapters/: test_openai_generate_basic.py  test_openai_mapping.py  test_openai_streaming_adapter.py  test_openai_streaming_mock.py  test_openai_tools.py  test_stream_events.py  test_stream_replay.py
tests/ci/: test_agents_doc_version.py  test_check_branch_naming.py  test_check_pr_closing_ref.py  test_diff_api_surface.py  test_review_brief.py
tests/contracts/: test_adapter_tools_api.py
tests/fixtures/: openai_fake.py
tests/harness/: __init__.py  adapter_harness.py
tests/io/: test_adapters_local.py  test_schema.py
tests/metadata/: test_pyproject_sync.py
tests/smoke/: test_runtime_adapter_contract.py
(+17 files in other folders)
