[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foundry"
version = "0.1.0"
description = "Utilities for scaffolding Python projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
foundry = "foundry.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["foundry"]
